# Algo2

Algo2 Tp grupal/tp2/: CMakeLists.txt  README.md
Algo2 Tp grupal/tp2/src/: Fachada_Juego.cpp  Fachada_Juego.h  Fachada_Servidor.cpp  Fachada_Servidor.h  Fachada_Variante.cpp  Fachada_Variante.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  Servidor.cpp  Servidor.h  Tablero.cpp  Tablero.h  Tipos.h  Variante.cpp  Variante.h  trie_set.cpp  trie_set.h
Algo2 Tp grupal/tp2/tests/: juego-empezado-tests.cpp  juego-grande-tests.cpp  juego-interno-tests.cpp  juego-tests.cpp  jugador-interno-tests.cpp  servidor-interno-tests.cpp  servidor-tests.cpp  tablero-interno-tests.cpp  trie-set-interno-tests.cpp  variante-interno-tests.cpp
Entregas/: README.md
Entregas/taller3/taller_trie/: CMakeLists.txt
Sorting y busqueda/: BubbleSort.cpp  README.md  SelectionSort.cpp  ejArrays.cpp
Sorting y busqueda/algoritmos DS/: CMakeLists.txt  Sorting_Searching.cpp  Sorting_Searching.h  Sorting_Searching_Python.py  tests.cpp  tests.h
labo/labo1/AyED2-Labo01/src/: funciones.cpp
